Remove logtool collector in favor of in process logging
